# self_balance_car

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  gdbinit
.cache/clangd/index/: Flash_Access.h.EF5480F864AFB74B.idx  FreeRTOS.h.D2A23F5763DDF873.idx  FreeRTOSConfig.h.AADDB17A64539701.idx  FreeRTOSConfig_arch.h.33A0908A0E20259E.idx  Hacl_Curve25519_joined.c.12B88ECBC2AD9665.idx  Partition.cpp.7B8437B42353C0FA.idx  Partition.h.CFDA1E2EC71C7CC4.idx  SPI_Flash.cpp.2D24B440D77C7FBE.idx  SPI_Flash.h.BFD51F6646519BFE.idx  WL_Config.h.F121A230A5FA03C9.idx  WL_Ext_Cfg.h.59B79C42E6623F60.idx  WL_Ext_Perf.cpp.F727814E7EBE90D3.idx  WL_Ext_Perf.h.1B8579D1F7CEA91A.idx  WL_Ext_Safe.cpp.E68F838B0408AEE4.idx  WL_Ext_Safe.h.C4D863C1ACFBF12F.idx  WL_Flash.cpp.EAAE3FB168078E3E.idx  WL_Flash.h.7D1B966CA5F26866.idx  WL_State.h.168BC20953C05848.idx  abort.c.572BBBE4384E8A92.idx  adc.h.7117D3B450474411.idx  adc1_private.h.9573B01E27660304.idx  adc_cali.c.EE981444FA340562.idx  adc_cali.h.D455709CB0204DE9.idx  adc_cali_curve_fitting.c.D26D9B10AEAA0167.idx  adc_cali_interface.h.DB7F3049DD909589.idx  adc_cali_line_fitting.c.1A15808DE72EDFD9.idx  adc_dma.c.C789B81EB9ED50E7.idx  (+2042 more)
main/: CMakeLists.txt  self_balance_car.c
mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050_6Axis.c  mpu6050_dmp.c  time.c
mpu6050/include/: mpu6050.h  mpu6050_6Axis.h  mpu6050_dmp.h  mpu6050_dmp_data.h  mpu6050_regs.h  time.h
mpu6050/include/imu/: inv_imu_driver.c  inv_imu_driver.h  inv_imu_selftest.c  inv_imu_selftest.h  inv_imu_transport.c  inv_time.c
usei2c/: CMakeLists.txt  usei2c.c
usei2c/include/: usei2c.h
(+1 files in other folders)
